Added close buttton for stock
Added close button when adding new stock

--- a/bootstrap-5.0.2-dist/css/style.css
+++ b/bootstrap-5.0.2-dist/css/style.css
@@ -44,8 +44,8 @@ main{
 .addstock{background: white;z-index: 1;position: fixed;top: 100px;left: 430px; width: 800px;padding: 50px; transform: translate(0,0) scale(0);transition: 1s;}
 .addstock.active{transform: translate(0,0)scale(1.0);}
 
-.addnewstock{background: white;z-index: 1;position: fixed;top: 100px;left: 430px; width: 800px;padding: 50px; transform: translate(0,0) scale(0);transition: 1s;}
-.addnewstock.active{transform: translate(0,0)scale(1.0);}
+.addnewproduct{background: white;z-index: 1;position: fixed;top: 100px;left: 430px; width: 800px;padding: 50px; transform: translate(0,0) scale(0);transition: 1s;}
+.addnewproduct.active{transform: translate(0,0)scale(1.0);}
 
 
 .overflow{position:absolute;top: 0;bottom: 0;right: 0;left: 0;background: grey;}
