--- a/bootstrap-5.0.2-dist/css/style.css
+++ b/bootstrap-5.0.2-dist/css/style.css
@@ -53,6 +53,9 @@ main{
 .addIncome{background: white;z-index: 1;position: fixed;top: 100px;left: 430px; width: 800px;padding: 50px; transform: translate(0,0) scale(0);transition: 1s;}
 .addIncome.active{transform: translate(0,0)scale(1.0);}
 
+.stock1{background: white;z-index: 1;position: fixed;top: 100px;left: 430px; width: 800px;padding: 50px; transform: translate(0,0) scale(0);transition: 1s;}
+.stock1.active{transform: translate(0,0)scale(1.0);}
+
 
 .overflow{position:absolute;top: 0;bottom: 0;right: 0;left: 0;background: grey;}
 
