--- a/bootstrap-5.0.2-dist/css/style.css
+++ b/bootstrap-5.0.2-dist/css/style.css
@@ -218,3 +218,13 @@ main{
 .cards.active{
     display: none;
 }
+
+
+
+
+/*start of stock manager styles*/
+
+.card:hover {
+  background-color: yellow;
+}
+/*end of stock manager styles*/
