Cancel button & cards
Added a cancel button on update
Added  hover on cards

--- a/bootstrap-5.0.2-dist/css/style.css
+++ b/bootstrap-5.0.2-dist/css/style.css
@@ -244,3 +244,10 @@ main{
   background-color: yellow;
 }
 /*end of stock manager styles*/
+
+/* css for show expense paragraph */
+#show_income{
+    cursor: pointer;
+    font-weight: bold;
+    color: burlywood;
+}
